[tool.poetry]
name = "share1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
bs4 = "^0.0.1"
lxml = "^4.5.1"
requests = "^2.24.0"
openpyxl = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
